<resources>
    <string name="app_name">Warehouse Inventory</string>
    <string name="title_activity_login">Employee Login</string>
    <string name="title_activity_scan_location">Scan Location</string>
    <string name="title_activity_scan_item">Count Items</string>
    <string name="title_activity_count_item">Enter Counts</string>
    <!-- Labels-->
    <string name="label_tag_number">Tag #:</string>
    <string name="label_pack_size">Pack Size:</string>
    <string name="label_received_date">Rec. Date:</string>
    <string name="label_expiration_date">Exp. Date:</string>
    <string name="start_session">Start a new session</string>
    <string name="first_count">1st</string>
    <string name="second_count">2nd</string>
    <string name="third_count">3rd</string>
    <string name="inventory_counts">Inventory Counts</string>
    <string name="enter_employee_number">Enter your Employee Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="scan_location">Scan Location</string>
    <string name="empty">Empty</string>
    <string name="scan_item">Scan Item</string>
    <string name="pallets">Pallets</string>
    <string name="case_qty">Case Qty</string>
    <string name="loose_qty">Loose Qty</string>
    <string name="done">Done</string>
    <!-- Scan Activity error messages -->
    <string name="error_location_not_found">Location not found.</string>
    <string name="error_item_not_found">Item not found.</string>
    <!-- Login Activity messages -->
    <string name="error_please_enter_employee_number">Please enter an employee number.</string>
    <string name="error_employee_not_found">Employee not found.</string>
    <string name="login_success">Login Success!</string>
    <!-- Count Activity-->

</resources>
