<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rocks.athrow.android_inventory_counts.activity.MainActivity">

    <TextView
        android:textColor="#212121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_session"
        android:textSize="22sp" />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/count1_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/mainButtonPadding"
            android:paddingTop="@dimen/mainButtonPadding"
            android:text="@string/first_count"
            android:textSize="14sp" />

        <Button
            android:id="@+id/count2_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/mainButtonPadding"
            android:paddingTop="@dimen/mainButtonPadding"
            android:text="@string/second_count"
            android:textSize="14sp" />

        <Button
            android:id="@+id/count3_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/mainButtonPadding"
            android:paddingTop="@dimen/mainButtonPadding"
            android:text="@string/third_count"
            android:textSize="14sp" />
    </android.support.v7.widget.ButtonBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#616161" />

    <TextView
        android:textColor="#212121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/inventory_counts"
        android:textSize="22sp" />

</LinearLayout>
